--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Ed Ho</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Quattrocento" rel="stylesheet">
 </head>
+
 <body>
-    <p>hello</p>
+    <div class="header">
+        <div class="name">
+            <p class="headertxt" id="headername">ed ho</p>
+            <p class="headertxt" id="headertitles">paper engineer<br>physical experience<br>graphic design</p>
+        </div>
+        <div class="about">
+            <p class="abouttxt" id="aboutdsc">I specialize in everything paper related, I can make:<br><br>Artistic objects: replicas, models, musical instruments <br>Structural objects: envelopes, boxes, bags<br>Graphic objects: business cards, labels, layouts<br><br>Anything that you can think of I can make out of paper. I am always looking to push the engineering and aesthetic boundaries of paper. My passion is to create beautiful paper objects with amazing structural and graphic design.</p>
+        </div>
+    </div>
+    <div class="projects">
+        <!--VIOLIN-->
+        <div class="projectimg" id="projectimg1">
+            <img class="projectimg" id="violining" src="img/violin.jpg">
+        </div>
+        <div class="projectdsc" id="projectdsc1">
+            <p class="projectdscheader" id="projectdscheader1">paper violin</p>
+            <p class="projectabout">Inspired by the Studio Ghibli film Whisper of the Heart, I created a playable acoustic violin made out of paper, popsicle sticks and white glue. I designed and built all parts of the violin except the strings, tuning pegs, bridge and tailpiece. </p>
+        </div>
+        <!--VIOLIN-->
+
+        <!--SWORD-->
+        <div class="projectdsc" id="projectdsc2">
+            <p class="projectdscheader" id="projectdscheader2">paper sword</p>
+            <p class="projectabout" id="projectabout2">A replica sword modeled after the anime Sword Art Online. The sword is hand made and the only materials used were paper, popsicle sticks, and white glue.</p>
+        </div>
+        <div class="projectimg" id="projectimg2">
+            <img class="projectimg" src="img/sword.jpg">
+        </div>
+        <!--SWORD-->
+
+        <!--RILAKUMA-->
+        <div class="projectimg" id="projectimg3">
+            <img src="img/rilakuma.jpg" alt="" class="projectimg">
+        </div>
+        <div class="projectdsc" id="projectdsc3">
+            <p class="projectdscheader" id="projectdscheader3">rilakuma wall display</p>
+            <p class="projectabout" id="projectabout3">A large scale geometric wall display of the popular Japanese character Rilakuma. The display is about three feet tall and four feet wide. It is composed of hundreds of pieces of paper, folded into pyramid shapes.</p>
+        </div>
+        <!--RILAKUMA-->
+
+        <!--PUPPET-->
+        <div class="projectdsc" id="projectdsc4">
+            <p class="projectdscheader" id="projectdscheader4">chinese shadow puppet</p>
+            <p class="projectabout" id="projectabout4">Replica ancient Chinese shadow theater puppet. Manilla folder was soaked in oil to increase transparency, and then cut into the shape of the puppets appendages. The puppet was then painted, the joints were sewn together, and rods were attached.</p>
+        </div>
+        <div class="projectimg" id="projectimg4">
+            <img src="img/puppet.jpg" alt="" class="projectimg">
+        </div>
+        <!--PUPPET-->
+
+        <!--RICE SCOOP-->
+        <div class="projectimg" id="projectimg5">
+            <img src="img/ricescoop.jpg" alt="" class="projectimg">
+        </div>
+        <div class="projectdsc" id="projectdsc5">
+            <p class="projectdscheader" id="projectdscheader5">wooden rice scoop</p>
+            <p class="projectabout" id="projectabout5">Handmade wooden rice scoop. The rice scoop was designed with an asymmetrical paddle to increase ease of scooping when used with the right hand.</p>
+        </div>
+        <!--RICE SCOOP-->
+
+        <!--COIN RING-->
+        <div class="projectdsc" id="projectdsc6">
+            <p class="projectdscheader" id="projectdscheader6">coin ring</p>
+            <p class="projectabout" id="projectabout6">Rings made from an American silver quarter, and a Canadian quarter. The edges rings were tapped with a metal spoon to create the flat edge of the ring. The center of the ring was then drilled out and filed to fit comfortably on the hand.</p>
+        </div>
+        <div class="projectimg" id="projectimg6">
+            <img src="img/coinring.jpg" alt="" class="projectimg">
+        </div>
+        <!--COIN RING-->
+
+        <!--__HI-->
+        <div class="projectimg" id="projectimg7">
+            <img src="img/__hi%20CHARMAP%201.svg">
+        </div>
+        <div class="projectdsc" id="projectdsc7">
+            <p class="projectdscheader" id="projectdscheader7">__hi Typeface</p>
+            <p class="projectabout" id="projectabout7">A condensed typeface made from a restricted grid of triangles. It was designed to be used when horizontal space is limited. The typeface features the alphanumeric characters as well as a small array of special characters. </p>
+        </div>
+        <!--__HI-->
+
+        <!--ILYTEA-->
+        <div class="projectdsc" id="projectdsc8">
+            <p class="projectdscheader" id="projectdscheader8">ilytea</p>
+            <p class="projectabout" id="projectabout8">A sidewalk vending bubble tea stand I created over the Summer of 2018. I designed the polar bear logo as well as the logotype for the banner. The logo was found on the cup stickers, menu, and was stenciled on the inside of the canopy.</p>
+        </div>
+        <div class="projectimg" id="projectimg8">
+            <img src="img/ilytea.png" alt="" class="projectimg">
+        </div>
+        <!--ILYTEA-->
+
+        <!--UCHIAGE-->
+        <div class="projectimg" id="projectimg9">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/LvmjAtpoBZQ" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
+        <div class="projectdsc" id="projectdsc9">
+            <p class="projectdscheader" id="projectdscheader9">motion graphics lyric video</p>
+            <p class="projectabout" id="projectabout9">Motion graphics lyric video I made for a popular cover singer on YouTube. The only assets that were given to me were the background image and the two characters. The video has been viewed around 184,000 times. </p>
+        </div>
+        <!--UCHIAGE-->
+
+        <!--MOTION GRAPHICS-->
+        <div class="projectdsc" id="projectdsc10">
+            <p class="projectdscheader" id="projectdscheader10">motion graphics final project</p>
+            <p class="projectabout" id="projectabout10">Final project in my motion graphics class. The video was based on a stamp from the Netherlands. The shapes that the dots and lines create were based off of the geographical outlines of all the major cities in the Netherlands. The colors that the dots, background, and lines were taken from the each cities respective flag.</p>
+        </div>
+        <div class="projectimg" id="projectimg10">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/314087429?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
+        <!--MOTION GRAPHICS-->
+    </div>
+    <div class="footer">© edho</div>
 </body>
+
 </html>
