--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!--__HI-->
         <div class="projectimg" id="projectimg7">
-            <img src="img/__hi%20CHARMAP%201.svg">
+            <img src="img/__hi.png">
         </div>
         <div class="projectdsc" id="projectdsc7">
             <p class="projectdscheader" id="projectdscheader7">__hi Typeface</p>
