--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!--__HI-->
         <div class="projectimg" id="projectimg7">
-            <img src="img/__hi.png">
+            <img class="projectimg" src="img/__hi.png">
         </div>
         <div class="projectdsc" id="projectdsc7">
             <p class="projectdscheader" id="projectdscheader7">__hi Typeface</p>
@@ -113,7 +113,7 @@
         <!--MOTION GRAPHICS-->
         <div class="projectdsc" id="projectdsc10">
             <p class="projectdscheader" id="projectdscheader10">motion graphics final project</p>
-            <p class="projectabout" id="projectabout10">Final project in my motion graphics class. The video was based on a stamp from the Netherlands. The shapes that the dots and lines create were based off of the geographical outlines of all the major cities in the Netherlands. The colors that the dots, background, and lines were taken from the each cities respective flag.</p>
+            <p class="projectabout" id="projectabout10">Final project in my motion graphics class. The video was based on a stamp from the Netherlands. The shapes that the dots and lines create were based off of the geographical outlines of all the major cities in the Netherlands. The colors of dots, background and lines, were taken from the each cities respective flag.</p>
         </div>
         <div class="projectimg" id="projectimg10">
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/314087429?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
