--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!--__HI-->
         <div class="projectimg" id="projectimg7">
-            <img class="projectimg" src="img/__hi.png">
+            <img class="projectimg" src="img/hi.jpg">
         </div>
         <div class="projectdsc" id="projectdsc7">
             <p class="projectdscheader" id="projectdscheader7">__hi Typeface</p>
