--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!--SWORD-->
         <div class="projectdsc" id="projectdsc2">
             <p class="projectdscheader" id="projectdscheader2">paper sword</p>
-            <p class="projectabout" id="projectabout2">A replica sword modeled after the anime Sword Art Online. The sword is hand made and the only materials used were paper, popsicle sticks, and white glue.</p>
+            <p class="projectabout" id="projectabout2">A replica sword modeled after the anime Sword Art Online. The sword is hand made and the only materials used were paper, popsicle sticks, and white glue. The sword is also very structurally sound, it won't cut anything, but can withstand multiple swings at full force against hard objects.</p>
         </div>
         <div class="projectimg" id="projectimg2">
             <img class="projectimg" src="img/sword.jpg">
