--- a/index.html
+++ b/index.html
@@ -2,118 +2,117 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style/style.css">
+   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ed Ho</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Quattrocento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins: 300,400,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-    <div class="header">
-        <div class="name">
-            <p class="headertxt" id="headername">ed ho</p>
-            <p class="headertxt" id="headertitles">paper engineer<br>physical experience<br>graphic design</p>
+    <header>
+        <div class="landingcontainer">
+            <div>
+                <p id="landingtitle">Ed Ho</p>
+            </div>
+            <div class="landingdscdiv">
+                <p id="landingdsc">
+                    Paper Artist and Engineer
+                </p>
+            </div>
         </div>
-        <div class="about">
-            
+    </header>
+    <div class="projectcontainer">
+        <div class="violin">
+            <div>
+                <img src="../img/violin.jpg" alt="" class="projectimg">
+                <div class="vid" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/hZbKflWKW6w" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Paper Violin
+                    </p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae, illo quidem nisi, dolore consectetur necessitatibus quis, est nam, adipisci consequuntur incidunt amet tempora earum nemo magnam praesentium quam nulla..</p>
+                </div>
+            </div>
+        </div>
+        <div class="microphone">
+            <div>
+                <img src="../img/microphone.gif" alt="" class="projectimg">
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Pop Up Microphone
+                    </p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ducimus amet repudiandae quam consequuntur provident cupiditate quis ipsam suscipit nemo.</p>
+                </div>
+            </div>
+        </div>
+        <div class="totoro">
+            <div>
+                <img src="../img/totoro.jpg" alt="" class="projectimg">
+                <div style="padding:56.25% 0 0 0;position:relative;" class="totorovid" id="totorovidleft"><iframe src="https://www.youtube.com/embed/4TWTYdhxn34" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <div style="padding:56.25% 0 0 0;position:relative;" class="totorovid" id="totorovidright"><iframe src="https://www.youtube.com/embed/vA9m5b54kfA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Paper Embossment Poster
+                    </p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, voluptas? Eligendi officia, voluptatibus explicabo ut quae facere harum ex consequuntur delectus laborum dicta, facilis numquam.</p>
+                </div>
+            </div>
+        </div>
+        <div class="emoji">
+            <div>
+                <img src="../img/emoji.gif" alt="" class="projectimg">
+                <div style="padding:56.25% 0 0 0;position:relative;" class="vid"><iframe src="https://www.youtube.com/embed/DgHmu3Nw3WA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Pop Up Emoji
+                    </p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus eius voluptates eum explicabo, suscipit velit animi consectetur omnis!</p>
+                </div>
+            </div>
+        </div>
+        <div class="rilakuma">
+            <div>
+                <img src="../img/rilakuma.jpg" alt="" class="projectimg">
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Rilakuma Geometric Display
+                    </p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae harum quidem ipsam facere, ratione. Hic praesentium, provident voluptate a officia!</p>
+                </div>
+            </div>
+        </div>
+        <div class="sword">
+            <div>
+                <img src="../img/sword.jpg" alt="" class="projectimg">
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        fdsafdsafdsafas
+                    </p>
+                    <p class="projectdsc">Something about step 2</p>
+                </div>
+            </div>
+        </div>
+        <div class="babypolarbear">
+            <div>
+                <img src="../img/babypolarbear.jpg" alt="" class="projectimg">
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        fdsafdsafdsafas
+                    </p>
+                    <p class="projectdsc">fdsafdsafdasf</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="projects">
-        <!--VIOLIN-->
-        <div class="projectimg" id="projectimg1">
-            <img class="projectimg" id="violining" src="img/violin.jpg">
-        </div>
-        <div class="projectdsc" id="projectdsc1">
-            <p class="projectdscheader" id="projectdscheader1">paper violin</p>
-            <p class="projectabout">Inspired by the Studio Ghibli film Whisper of the Heart, I created a playable acoustic violin made out of paper, popsicle sticks and white glue. I designed and built all parts of the violin except the strings, tuning pegs, bridge and tailpiece. </p>
-        </div>
-        <!--VIOLIN-->
-
-        <!--SWORD-->
-        <div class="projectdsc" id="projectdsc2">
-            <p class="projectdscheader" id="projectdscheader2">paper sword</p>
-            <p class="projectabout" id="projectabout2">A replica sword modeled after the anime Sword Art Online. The sword is hand made and the only materials used were paper, popsicle sticks, and white glue. The sword is also very structurally sound, it won't cut anything, but can withstand multiple swings at full force against hard objects.</p>
-        </div>
-        <div class="projectimg" id="projectimg2">
-            <img class="projectimg" src="img/sword.jpg">
-        </div>
-        <!--SWORD-->
-
-        <!--RILAKUMA-->
-        <div class="projectimg" id="projectimg3">
-            <img src="img/rilakuma.jpg" alt="" class="projectimg">
-        </div>
-        <div class="projectdsc" id="projectdsc3">
-            <p class="projectdscheader" id="projectdscheader3">rilakuma wall display</p>
-            <p class="projectabout" id="projectabout3">A large scale geometric wall display of the popular Japanese character Rilakuma. The display is about three feet tall and four feet wide. It is composed of hundreds of pieces of paper, folded into pyramid shapes.</p>
-        </div>
-        <!--RILAKUMA-->
-
-        <!--PUPPET-->
-        <div class="projectdsc" id="projectdsc4">
-            <p class="projectdscheader" id="projectdscheader4">chinese shadow puppet</p>
-            <p class="projectabout" id="projectabout4">Replica ancient Chinese shadow theater puppet. Manilla folder was soaked in oil to increase transparency, and then cut into the shape of the puppets appendages. The puppet was then painted, the joints were sewn together, and rods were attached.</p>
-        </div>
-        <div class="projectimg" id="projectimg4">
-            <img src="img/puppet.jpg" alt="" class="projectimg">
-        </div>
-        <!--PUPPET-->
-
-        <!--RICE SCOOP-->
-        <div class="projectimg" id="projectimg5">
-            <img src="img/ricescoop.jpg" alt="" class="projectimg">
-        </div>
-        <div class="projectdsc" id="projectdsc5">
-            <p class="projectdscheader" id="projectdscheader5">wooden rice scoop</p>
-            <p class="projectabout" id="projectabout5">Handmade wooden rice scoop. The rice scoop was designed with an asymmetrical paddle to increase ease of scooping when used with the right hand.</p>
-        </div>
-        <!--RICE SCOOP-->
-
-    
-
-        <!--__HI-->
-        <div class="projectimg" id="projectimg7">
-            <img src="img/hi.jpg" alt="" class="projectimg">
-        </div>
-        <div class="projectdsc" id="projectdsc7">
-            <p class="projectdscheader" id="projectdscheader7">__hi Typeface</p>
-            <p class="projectabout" id="projectabout7">A condensed typeface made from a restricted grid of triangles. It was designed to be used when horizontal space is limited. The typeface features the alphanumeric characters as well as a small array of special characters. </p>
-        </div>
-        <!--__HI-->
-
-        <!--ILYTEA-->
-        <div class="projectdsc" id="projectdsc8">
-            <p class="projectdscheader" id="projectdscheader8">ilytea</p>
-            <p class="projectabout" id="projectabout8">A sidewalk vending bubble tea stand I created over the Summer of 2018. I designed the polar bear logo as well as the logotype for the banner. The logo was found on the cup stickers, menu, and was stenciled on the inside of the canopy.</p>
-        </div>
-        <div class="projectimg" id="projectimg8">
-            <img src="img/ilytea.png" alt="" class="projectimg">
-        </div>
-        <!--ILYTEA-->
-
-        <!--UCHIAGE-->
-        <div class="projectimg" id="projectimg9">
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/LvmjAtpoBZQ" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
-        </div>
-        <div class="projectdsc" id="projectdsc9">
-            <p class="projectdscheader" id="projectdscheader9">motion graphics lyric video</p>
-            <p class="projectabout" id="projectabout9">Motion graphics lyric video I made for a popular cover singer on YouTube. The only assets that were given to me were the background image and the two characters. The video has been viewed around 184,000 times. </p>
-        </div>
-        <!--UCHIAGE-->
-
-        <!--MOTION GRAPHICS-->
-        <div class="projectdsc" id="projectdsc10">
-            <p class="projectdscheader" id="projectdscheader10">motion graphics final project</p>
-            <p class="projectabout" id="projectabout10">Final project in my motion graphics class. The video was based on a stamp from the Netherlands. The shapes that the dots and lines create were based off of the geographical outlines of all the major cities in the Netherlands. The colors of dots, background and lines, were taken from the each cities respective flag.</p>
-        </div>
-        <div class="projectimg" id="projectimg10">
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/314087429?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
-        </div>
-        <!--MOTION GRAPHICS-->
-    </div>
-    <div class="footer">© edho</div>
 </body>
 
 </html>
