--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <img src="../img/sword.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
-                        fdsafdsafdsafas
+                        Paper Sword
                     </p>
-                    <p class="projectdsc">Something about step 2</p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, sed. Molestiae atque quidem odit reiciendis!</p>
                 </div>
             </div>
         </div>
@@ -106,9 +106,9 @@
                 <img src="../img/babypolarbear.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
-                        fdsafdsafdsafas
+                        T Shirt Packaging
                     </p>
-                    <p class="projectdsc">fdsafdsafdasf</p>
+                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, ratione, natus. Quaerat, earum, et. Minus nulla in fuga consectetur earum.</p>
                 </div>
             </div>
         </div>
