--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="projectcontainer">
         <div class="violin">
             <div>
-                <img src="../img/violin.jpg" alt="" class="projectimg">
+                <img src="img/violin.jpg" alt="" class="projectimg">
                 <div class="vid" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/hZbKflWKW6w" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
                 <div class="projectdsccontainer">
@@ -42,7 +42,7 @@
         </div>
         <div class="microphone">
             <div>
-                <img src="../img/microphone.gif" alt="" class="projectimg">
+                <img src="img/microphone.gif" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
                         Pop Up Microphone
@@ -53,7 +53,7 @@
         </div>
         <div class="totoro">
             <div>
-                <img src="../img/totoro.jpg" alt="" class="projectimg">
+                <img src="img/totoro.jpg" alt="" class="projectimg">
                 <div style="padding:56.25% 0 0 0;position:relative;" class="totorovid" id="totorovidleft"><iframe src="https://www.youtube.com/embed/4TWTYdhxn34" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
                 <div style="padding:56.25% 0 0 0;position:relative;" class="totorovid" id="totorovidright"><iframe src="https://www.youtube.com/embed/vA9m5b54kfA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -68,7 +68,7 @@
         </div>
         <div class="emoji">
             <div>
-                <img src="../img/emoji.gif" alt="" class="projectimg">
+                <img src="img/emoji.gif" alt="" class="projectimg">
                 <div style="padding:56.25% 0 0 0;position:relative;" class="vid"><iframe src="https://www.youtube.com/embed/DgHmu3Nw3WA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
                 <div class="projectdsccontainer">
@@ -81,7 +81,7 @@
         </div>
         <div class="rilakuma">
             <div>
-                <img src="../img/rilakuma.jpg" alt="" class="projectimg">
+                <img src="img/rilakuma.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
                         Rilakuma Geometric Display
@@ -92,7 +92,7 @@
         </div>
         <div class="sword">
             <div>
-                <img src="../img/sword.jpg" alt="" class="projectimg">
+                <img src="img/sword.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
                         Paper Sword
@@ -103,7 +103,7 @@
         </div>
         <div class="babypolarbear">
             <div>
-                <img src="../img/babypolarbear.jpg" alt="" class="projectimg">
+                <img src="img/babypolarbear.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
                         T Shirt Packaging
