--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p class="projecttitle">
                         Paper Violin
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae, illo quidem nisi, dolore consectetur necessitatibus quis, est nam, adipisci consequuntur incidunt amet tempora earum nemo magnam praesentium quam nulla..</p>
+                    <p class="projectdsc">Inspired by one of my favorite movies, I designed and built a violin completely from paper and popsicle sticks. </p>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     <p class="projecttitle">
                         Pop Up Microphone
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ducimus amet repudiandae quam consequuntur provident cupiditate quis ipsam suscipit nemo.</p>
+                    <p class="projectdsc">The brief for this project was to design cover for a book which contained a collection of interviews. I designed a pop up microphone which makes use of paper mechanics I created that are not found in typical pop up technique documentation.</p>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
                     <p class="projecttitle">
                         Paper Embossment Poster
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, voluptas? Eligendi officia, voluptatibus explicabo ut quae facere harum ex consequuntur delectus laborum dicta, facilis numquam.</p>
+                    <p class="projectdsc">Frustrated with the existing methods of paper embossment, I created my own system which only requires cheap materiels to execute. The system also allows for precise multi level embossment. I utlized this system to create this small poster of one of my favorite characters and designed a beveled frame which cleanly holds the piece. </p>
                 </div>
             </div>
         </div>
@@ -75,32 +75,45 @@
                     <p class="projecttitle">
                         Pop Up Emoji
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus eius voluptates eum explicabo, suscipit velit animi consectetur omnis!</p>
+                    <p class="projectdsc">Inspired by the overwhelming popularity of this new emoji, I designed it into a pop up. I created a system of stackable 2.5D layering which I then used to make the card. While the artwork of this piece is quite simple, the system could be applied to art work of any level of complexity as it technically allows for an infinite number of layers.</p>
                 </div>
             </div>
         </div>
-        <div class="rilakuma">
+        <div class="building">
             <div>
-                <img src="img/rilakuma.jpg" alt="" class="projectimg">
+                <img src="img/buildinggif.gif" alt="" class="projectimg">
+                <img src="img/building.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
-                        Rilakuma Geometric Display
+                        Pop Up Boston Sidewalk
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae harum quidem ipsam facere, ratione. Hic praesentium, provident voluptate a officia!</p>
+                    <p class="projectdsc">Inspired by the architecture of Boston's streets, I tried designing a kirigami of a building that I lived near. However, traditional kirigami techniques did not allow for the level of completxity I wanted, so I came up with my own system. Typical pop up and kirigami production methods have too much friction for certain mechanics to work, however my system allows for multi layering and incorporates several techniques I innovated to reduce friction.   </p>
+                </div>
+            </div>
+        </div>
+        <div class="rotterdam">
+            <div>
+                <img src="img/rotterdam.jpg" alt="" class="projectimg">
+                <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Rotterdam Stationary
+                    </p>
+                    <p class="projectdsc">The brief for this project was to rebrand a city and create collateral with our rebrand on it. The concept behind my rebrand was "Open Everything" as Rotterdam is known for its waterways, large parks and open sidewalks. Following this concept, the pamphlet and envelope open at the 'TT' in Rotterdam. I also designed a pop up of Rotterdam's most famous brdige the Erasmusbrug. </p>
                 </div>
             </div>
         </div>
         <div class="sword">
             <div>
-                <img src="img/sword.jpg" alt="" class="projectimg">
+                <img src="img/sword2.jpg" alt="" class="projectimg">
                 <div class="projectdsccontainer">
                     <p class="projecttitle">
                         Paper Sword
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, sed. Molestiae atque quidem odit reiciendis!</p>
+                    <p class="projectdsc">I fdfdsasa</p>
                 </div>
             </div>
         </div>
+        
         <div class="babypolarbear">
             <div>
                 <img src="img/babypolarbear.jpg" alt="" class="projectimg">
