--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <p id="landingdsc">
                     Paper Artist and Engineer
                 </p>
+                <a id="resume" href="resume.pdf" target="_blank">Resume</a>
             </div>
         </div>
     </header>
@@ -36,7 +37,7 @@
                     <p class="projecttitle">
                         Paper Violin
                     </p>
-                    <p class="projectdsc">Inspired by one of my favorite movies, I designed and built a violin completely from paper and popsicle sticks. </p>
+                    <p class="projectdsc">A playable violin made from paper and popsicle sticks. The aesthetic and structural design are both completely original. </p>
                 </div>
             </div>
         </div>
@@ -47,7 +48,7 @@
                     <p class="projecttitle">
                         Pop Up Microphone
                     </p>
-                    <p class="projectdsc">The brief for this project was to design cover for a book which contained a collection of interviews. I designed a pop up microphone which makes use of paper mechanics I created that are not found in typical pop up technique documentation.</p>
+                    <p class="projectdsc">A book cover for a collection of interviews. The microphone makes use of original paper mechanics that I invented.</p>
                 </div>
             </div>
         </div>
@@ -62,7 +63,8 @@
                     <p class="projecttitle">
                         Paper Embossment Poster
                     </p>
-                    <p class="projectdsc">Frustrated with the existing methods of paper embossment, I created my own system which only requires cheap materiels to execute. The system also allows for precise multi level embossment. I utlized this system to create this small poster of one of my favorite characters and designed a beveled frame which cleanly holds the piece. </p>
+                    <p class="projectdsc">A frame and poster of one of my favorite characters. To make the poster I created a system that allows for precise multi-level embossment. 
+                </p>
                 </div>
             </div>
         </div>
@@ -75,7 +77,7 @@
                     <p class="projecttitle">
                         Pop Up Emoji
                     </p>
-                    <p class="projectdsc">Inspired by the overwhelming popularity of this new emoji, I designed it into a pop up. I created a system of stackable 2.5D layering which I then used to make the card. While the artwork of this piece is quite simple, the system could be applied to art work of any level of complexity as it technically allows for an infinite number of layers.</p>
+                    <p class="projectdsc">A pop up of the recently popular pleading emoji. To make the card I created a system that can be used to  create infinitely stackable 2.5D pop ups. </p>
                 </div>
             </div>
         </div>
@@ -87,7 +89,8 @@
                     <p class="projecttitle">
                         Pop Up Boston Sidewalk
                     </p>
-                    <p class="projectdsc">Inspired by the architecture of Boston's streets, I tried designing a kirigami of a building that I lived near. However, traditional kirigami techniques did not allow for the level of completxity I wanted, so I came up with my own system. Typical pop up and kirigami production methods have too much friction for certain mechanics to work, however my system allows for multi layering and incorporates several techniques I innovated to reduce friction.   </p>
+                    <p class="projectdsc">A pop up inspired from Boston's architecture. To make the pop up I created a system that allows for multi level, zero friction movement.
+                    </p>
                 </div>
             </div>
         </div>
@@ -98,7 +101,7 @@
                     <p class="projecttitle">
                         Rotterdam Stationary
                     </p>
-                    <p class="projectdsc">The brief for this project was to rebrand a city and create collateral with our rebrand on it. The concept behind my rebrand was "Open Everything" as Rotterdam is known for its waterways, large parks and open sidewalks. Following this concept, the pamphlet and envelope open at the 'TT' in Rotterdam. I also designed a pop up of Rotterdam's most famous brdige the Erasmusbrug. </p>
+                    <p class="projectdsc">A collection of paper products featuring my rebrand of Rotterdam. The concept of my rebrand was "Open Everything"  which is why the pamphlet and envelope open at the 'TT' in Rotterdam. I also designed a pop up of Rotterdam's most famous brdige the Erasmusbrug. </p>
                 </div>
             </div>
         </div>
@@ -109,7 +112,7 @@
                     <p class="projecttitle">
                         Paper Sword
                     </p>
-                    <p class="projectdsc">I fdfdsasa</p>
+                    <p class="projectdsc">A replica sword made from paper and popsicle sticks. The sword can withstand hard impacts and all the black is made from black paper. </p>
                 </div>
             </div>
         </div>
@@ -121,7 +124,7 @@
                     <p class="projecttitle">
                         T Shirt Packaging
                     </p>
-                    <p class="projectdsc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, ratione, natus. Quaerat, earum, et. Minus nulla in fuga consectetur earum.</p>
+                    <p class="projectdsc">T shirt packaging for my clothing brand.</p>
                 </div>
             </div>
         </div>
